--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -182,11 +182,12 @@ img {
 */
 .Button {
   padding: 8px 16px;
+  margin:20px auto;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
-  display: inline-block;
+  display: table;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -204,4 +205,11 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+}
+
+.no-found{
+  padding:30px;
+  text-align: center;
+  font-size: 2em;
+  color:rgb(150, 150, 150);
 }
