Finish pre refactoring

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -207,6 +207,12 @@ img {
   background-color: #303f9f;
 }
 
+.Loader{
+  display:table;
+  margin:auto;
+  padding:20px;
+}
+
 .no-found{
   padding:30px;
   text-align: center;
